2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Widget.cs: Added missing null check. Don't set the Name
	  property to unselectable widgets.

2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Button.cs, libstetic/wrapper/ButtonBox.cs: Don't
	  store the IsDialogButton property. The value can be determined on
	  the fly.

2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs: Assign the target gtk version to
	  the project being edited.
	* libstetic/wrapper/IconView.cs, libstetic/wrapper/objects.xml,
	  libstetic/libstetic.mdp, libstetic/Makefile.am: Added wrapper for
	  IconView.
	* libstetic/TypedPropertyDescriptor.cs: Added null check.

2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/ImageInfo.cs, libstetic/editor/ThemedIcon.cs,
	  libstetic/editor/SelectImageDialog.cs,
	  libstetic/editor/StockIconSelectorItem.cs,
	  libstetic/editor/StockIconList.cs, libstetic/editor/StockItem.cs,
	  libstetic/editor/SelectIconDialog.cs,
	  libstetic/GeneratorContext.cs, libstetic/WidgetUtils.cs: Fixed
	  loading of theme and gtk stock icons.

2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetPropertyTreeBackend.cs: Added missing null check.

2007-07-27  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: Added null check.
	* libsteticui/PluggableWidget.cs: When updating the child widget, do
	  not add it to the notebook if it is already a child of the
	  notebook.
	* libstetic/wrapper/pixmaps/comboentry.png,
	  libstetic/wrapper/pixmaps/iconview.png, libstetic/libstetic.mdp,
	  libstetic/Makefile.am: Added some missing icons.
	* libstetic/wrapper/Widget.cs, libstetic/wrapper/objects.xml: Fixed
	  some issues with HasDefault. It can only be assigned when the
	  widget already has a parent.
	* libstetic/TypedClassDescriptor.cs: Report icon loading errors.

2007-07-20  Lluis Sanchez Gual <lluis@novell.com> 
